@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.bonitasoft.console</groupId>
 	<artifactId>bonita-console</artifactId>
@@ -24,7 +25,7 @@
 		<bonita.engine.version>6.3.0-SNAPSHOT</bonita.engine.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		
+
 		<slf4j.version>1.6.1</slf4j.version>
 		<gwt.version>2.5.1</gwt.version>
 		<!-- The following property is used by the gwt-maven plugin. As it does 
@@ -33,6 +34,7 @@
 			to the same value. -->
 		<gwtVersion>${gwt.version}</gwtVersion>
 		<wro4j.version>1.7.0</wro4j.version>
+
 	</properties>
 
 	<dependencyManagement>
@@ -82,13 +84,6 @@
 				<artifactId>bonita-home</artifactId>
 				<version>${bonita.engine.version}</version>
 				<type>zip</type>
-			</dependency>
-
-			<!-- BONITA WEB -->
-			<dependency>
-				<groupId>org.bonitasoft.web</groupId>
-				<artifactId>theme-builder</artifactId>
-				<version>6.1.0</version>
 			</dependency>
 
 			<!-- MISCELLANEOUS -->
@@ -239,21 +234,6 @@
 	</dependencies>
 
 	<repositories>
-		<!-- include repository for GWT maven plugin -->
-		<repository>
-			<id>jboss-public-repository-group</id>
-			<name>JBoss Public Maven Repository Group</name>
-			<url>https://repository.jboss.org/nexus/content/groups/public/</url>
-			<layout>default</layout>
-			<releases>
-				<enabled>true</enabled>
-				<updatePolicy>never</updatePolicy>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-				<updatePolicy>never</updatePolicy>
-			</snapshots>
-		</repository>
 		<repository>
 			<id>oauth</id>
 			<url>http://oauth.googlecode.com/svn/code/maven/</url>
@@ -281,6 +261,11 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.10</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-failsafe-plugin</artifactId>
+					<version>2.16</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -313,10 +298,10 @@
 					<version>${gwt.version}</version>
 				</plugin>
 				<plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>build-helper-maven-plugin</artifactId>
-                    <version>1.8</version>
-                </plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>build-helper-maven-plugin</artifactId>
+					<version>1.8</version>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
@@ -341,6 +326,11 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
 					<version>2.4</version>
+				</plugin>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>0.6.3.201306030806</version>
 				</plugin>
 				<plugin>
 					<groupId>ro.isdc.wro4j</groupId>
@@ -388,6 +378,19 @@
 										<versionRange>[1.0,)</versionRange>
 										<goals>
 											<goal>enforce</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore />
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.jacoco</groupId>
+										<artifactId>jacoco-maven-plugin</artifactId>
+										<versionRange>[0.5,)</versionRange>
+										<goals>
+											<goal>prepare-agent</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
@@ -542,6 +545,121 @@
 							<excludes>
 								<exclude>**/*IntegrationTest*</exclude>
 							</excludes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>sonar</id>
+			
+			<properties>
+				<!-- Properties to enable jacoco code coverage analysis -->
+				<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+				<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+				<!-- Report output directory, in Jenkins use: -Djacoco.outputDir=${WORKSPACE}-->
+				<jacoco.outputDir>${user.home}</jacoco.outputDir>
+				<!-- The destination file for the code coverage report has to be set to 
+					the same value in the parent pom and in each module pom. Then JaCoCo will 
+					add up information in the same report, so that, it will give the cross-module 
+					code coverage. -->
+				<!-- Jacoco output file for UTs -->
+				<jacoco.out.ut.file>jacoco-web-ut.exec</jacoco.out.ut.file>
+				<!-- Tells Sonar where the Jacoco coverage result file is located for Unit Tests -->
+				<sonar.jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.ut.file}</sonar.jacoco.reportPath>
+				<!-- Jacoco output file for ITs -->
+				<jacoco.out.it.file>jacoco-web-it.exec</jacoco.out.it.file>
+				<!-- Tells Sonar where the Jacoco coverage result file is located for Integration Tests -->
+				<sonar.jacoco.itReportPath>${jacoco.outputDir}/${jacoco.out.it.file}</sonar.jacoco.itReportPath>
+			</properties>
+	
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<configuration>
+							<includes>
+								<include>org.bonitasoft.console.*</include>
+								<include>com.bonitasoft.console.*</include>
+								<include>org.bonitasoft.web.*</include>
+								<include>com.bonitasoft.web.*</include>
+								<include>org.bonitasoft.forms.*</include>
+								<include>com.bonitasoft.forms.*</include>
+							</includes>
+							<excludes>
+								<exclude>org.bonitasoft.console.client.*</exclude>
+								<exclude>com.bonitasoft.console.client.*</exclude>
+							</excludes>
+							<append>true</append>
+						</configuration>
+						<executions>
+							<execution>
+								<id>prepare-ut-agent</id>
+								<phase>process-test-classes</phase>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+								<configuration>
+									<destFile>${sonar.jacoco.reportPath}</destFile>
+									<propertyName>jacoco.agent.ut.arg</propertyName>
+									<append>true</append>
+								</configuration>
+							</execution>
+							<execution>
+								<id>prepare-it-agent</id>
+								<phase>pre-integration-test</phase>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+								<configuration>
+										<destFile>${sonar.jacoco.itReportPath}</destFile>
+										<propertyName>jacoco.agent.it.arg</propertyName>
+										<append>true</append>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<executions>
+							<execution>
+								<phase>integration-test</phase>
+								<goals>
+									<goal>integration-test</goal>
+									<goal>verify</goal>
+								</goals>
+		 						<configuration>
+		 							<argLine>-Xmx1024m -XX:MaxPermSize=256m ${jacoco.agent.it.arg}</argLine>
+									<systemPropertyVariables>
+										<bonita.home>${project.build.directory}/bonita/home</bonita.home>
+									</systemPropertyVariables>
+									<!-- workaround to have test report for IT in sonar, see http://stackoverflow.com/a/15567782/936729 -->
+									<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+									<includes>
+										<!--run all possible tests
+										maven failsafe plugin filters classes by name
+										add those includes if you want to preserve surefire conventions-->
+										<include>**/Test*.java</include>
+										<include>**/*Test.java</include>
+		
+										<!--the following are failsafe conventions -->
+										<!--<include>**/IT*.java</include>
+										<include>**/*IT.java</include>
+										<include>**/*ITCase.java</include>-->
+									</includes>
+								</configuration> 
+							</execution>
+						</executions>
+					</plugin>
+					<!-- Avoid executing the tests twice (they are already launched with failsafe) -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<argLine>${jacoco.agent.ut.arg}</argLine>
+							<skipTests>true</skipTests>
 						</configuration>
 					</plugin>
 				</plugins>
